src/app/ui/globals.css
@import "tailwindcss";

:root {
  --background: #f7db9d;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@layer utilities {
  .text-stroke-white {
    -webkit-text-stroke: 1px white;
  }

  .text-stroke-black {
    -webkit-text-stroke: 0.5px black;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
}

